# ccbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: setup.md  update-base.md
assets/: ccbox-profile.sh  tmux.conf  update-base.sh  uv-shim
src/ccbox/: cli.py  config.py  init.py  lxd.py  mount.py  picker.py  port.py  sandbox.py  session.py  transcript.py  uv_server.py
