[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "textual>=0.55.0",
]

[project.scripts]
ccbox = "ccbox.__main__:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM102", "SIM105"]
